seaqt/QtWidgets/gen_qlabel.h

class QLabel;
class QMetaObject;
class QMovie;
class QPicture;
class QPixmap;
class QSize;
class QWidget;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QLabel QLabel;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMovie QMovie;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPicture QPicture;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QLabel_override_virtual_closeEvent(void* self, intptr_t slot);
void QLabel_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QLabel_override_virtual_tabletEvent(void* self, intptr_t slot);
void QLabel_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QLabel_override_virtual_actionEvent(void* self, intptr_t slot);
void QLabel_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QLabel_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QLabel_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QLabel_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QLabel_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QLabel_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QLabel_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QLabel_override_virtual_dropEvent(void* self, intptr_t slot);
void QLabel_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QLabel_override_virtual_showEvent(void* self, intptr_t slot);
void QLabel_virtualbase_showEvent(void* self, QShowEvent* event);
bool QLabel_override_virtual_hideEvent(void* self, intptr_t slot);
void QLabel_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QLabel_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QLabel_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QLabel_override_virtual_metric(void* self, intptr_t slot);
int QLabel_virtualbase_metric(const void* self, int param1);
bool QLabel_override_virtual_initPainter(void* self, intptr_t slot);
void QLabel_virtualbase_initPainter(const void* self, QPainter* painter);
bool QLabel_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QLabel_virtualbase_redirected(const void* self, QPoint* offset);
bool QLabel_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QLabel_virtualbase_sharedPainter(const void* self);
bool QLabel_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QLabel_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QLabel_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QLabel_virtualbase_inputMethodQuery(const void* self, int param1);
bool QLabel_override_virtual_eventFilter(void* self, intptr_t slot);
bool QLabel_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QLabel_override_virtual_timerEvent(void* self, intptr_t slot);
void QLabel_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QLabel_override_virtual_childEvent(void* self, intptr_t slot);
void QLabel_virtualbase_childEvent(void* self, QChildEvent* event);
bool QLabel_override_virtual_customEvent(void* self, intptr_t slot);
void QLabel_virtualbase_customEvent(void* self, QEvent* event);
bool QLabel_override_virtual_connectNotify(void* self, intptr_t slot);
void QLabel_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QLabel_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QLabel_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QLabel_staticMetaObject();
void QLabel_delete(QLabel* self);