seaqt/QtWidgets/gen_qlabel.nim

proc fQLabel_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_closeEvent".}
proc fcQLabel_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_closeEvent".}
proc fQLabel_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_tabletEvent".}
proc fcQLabel_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_tabletEvent".}
proc fQLabel_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_actionEvent".}
proc fcQLabel_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_actionEvent".}
proc fQLabel_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_dragEnterEvent".}
proc fcQLabel_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_dragEnterEvent".}
proc fQLabel_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_dragMoveEvent".}
proc fcQLabel_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_dragMoveEvent".}
proc fQLabel_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_dragLeaveEvent".}
proc fcQLabel_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_dragLeaveEvent".}
proc fQLabel_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_dropEvent".}
proc fcQLabel_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_dropEvent".}
proc fQLabel_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_showEvent".}
proc fcQLabel_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_showEvent".}
proc fQLabel_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_hideEvent".}
proc fcQLabel_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_hideEvent".}
proc fQLabel_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QLabel_virtualbase_nativeEvent".}
proc fcQLabel_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_nativeEvent".}
proc fQLabel_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QLabel_virtualbase_metric".}
proc fcQLabel_override_virtual_metric(self: pointer, slot: int) {.importc: "QLabel_override_virtual_metric".}
proc fQLabel_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QLabel_virtualbase_initPainter".}
proc fcQLabel_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QLabel_override_virtual_initPainter".}
proc fQLabel_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QLabel_virtualbase_redirected".}
proc fcQLabel_override_virtual_redirected(self: pointer, slot: int) {.importc: "QLabel_override_virtual_redirected".}
proc fQLabel_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QLabel_virtualbase_sharedPainter".}
proc fcQLabel_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QLabel_override_virtual_sharedPainter".}
proc fQLabel_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QLabel_virtualbase_inputMethodEvent".}
proc fcQLabel_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_inputMethodEvent".}
proc fQLabel_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QLabel_virtualbase_inputMethodQuery".}
proc fcQLabel_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QLabel_override_virtual_inputMethodQuery".}
proc fQLabel_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QLabel_virtualbase_eventFilter".}
proc fcQLabel_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QLabel_override_virtual_eventFilter".}
proc fQLabel_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_timerEvent".}
proc fcQLabel_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_timerEvent".}
proc fQLabel_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_childEvent".}
proc fcQLabel_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_childEvent".}
proc fQLabel_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_customEvent".}
proc fcQLabel_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_customEvent".}
proc fQLabel_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QLabel_virtualbase_connectNotify".}
proc fcQLabel_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QLabel_override_virtual_connectNotify".}
proc fQLabel_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QLabel_virtualbase_disconnectNotify".}
proc fcQLabel_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QLabel_override_virtual_disconnectNotify".}
proc fcQLabel_staticMetaObject(): pointer {.importc: "QLabel_staticMetaObject".}
proc fcQLabel_delete(self: pointer) {.importc: "QLabel_delete".}


func init*(T: type gen_qlabel_types.QLabel, h: ptr cQLabel): gen_qlabel_types.QLabel =
  T(h: h)
proc create*(T: type gen_qlabel_types.QLabel, parent: gen_qwidget_types.QWidget): gen_qlabel_types.QLabel =
  gen_qlabel_types.QLabel.init(fcQLabel_new(parent.h))

proc create*(T: type gen_qlabel_types.QLabel, ): gen_qlabel_types.QLabel =
  gen_qlabel_types.QLabel.init(fcQLabel_new2())

proc create*(T: type gen_qlabel_types.QLabel, text: string): gen_qlabel_types.QLabel =
  gen_qlabel_types.QLabel.init(fcQLabel_new3(struct_miqt_string(data: text, len: csize_t(len(text)))))

proc create*(T: type gen_qlabel_types.QLabel, parent: gen_qwidget_types.QWidget, f: cint): gen_qlabel_types.QLabel =
  gen_qlabel_types.QLabel.init(fcQLabel_new4(parent.h, cint(f)))

proc create*(T: type gen_qlabel_types.QLabel, text: string, parent: gen_qwidget_types.QWidget): gen_qlabel_types.QLabel =
  gen_qlabel_types.QLabel.init(fcQLabel_new5(struct_miqt_string(data: text, len: csize_t(len(text))), parent.h))

proc create*(T: type gen_qlabel_types.QLabel, text: string, parent: gen_qwidget_types.QWidget, f: cint): gen_qlabel_types.QLabel =
  gen_qlabel_types.QLabel.init(fcQLabel_new6(struct_miqt_string(data: text, len: csize_t(len(text))), parent.h, cint(f)))

proc metaObject*(self: gen_qlabel_types.QLabel, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQLabel_metaObject(self.h))

proc metacast*(self: gen_qlabel_types.QLabel, param1: cstring): pointer =
  fcQLabel_metacast(self.h, param1)

proc metacall*(self: gen_qlabel_types.QLabel, param1: cint, param2: cint, param3: pointer): cint =
  fcQLabel_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qlabel_types.QLabel, s: cstring): string =
  let v_ms = fcQLabel_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc text*(self: gen_qlabel_types.QLabel, ): string =
  let v_ms = fcQLabel_text(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc pixmap*(self: gen_qlabel_types.QLabel, param1: cint): gen_qpixmap_types.QPixmap =
  gen_qpixmap_types.QPixmap(h: fcQLabel_pixmap(self.h, cint(param1)))

proc pixmap*(self: gen_qlabel_types.QLabel, ): gen_qpixmap_types.QPixmap =
  gen_qpixmap_types.QPixmap(h: fcQLabel_pixmap2(self.h))

proc picture*(self: gen_qlabel_types.QLabel, param1: cint): gen_qpicture_types.QPicture =
  gen_qpicture_types.QPicture(h: fcQLabel_picture(self.h, cint(param1)))

proc picture*(self: gen_qlabel_types.QLabel, ): gen_qpicture_types.QPicture =
  gen_qpicture_types.QPicture(h: fcQLabel_picture2(self.h))

proc movie*(self: gen_qlabel_types.QLabel, ): gen_qmovie_types.QMovie =
  gen_qmovie_types.QMovie(h: fcQLabel_movie(self.h))

proc textFormat*(self: gen_qlabel_types.QLabel, ): cint =
  cint(fcQLabel_textFormat(self.h))

proc setTextFormat*(self: gen_qlabel_types.QLabel, textFormat: cint): void =
  fcQLabel_setTextFormat(self.h, cint(textFormat))

proc alignment*(self: gen_qlabel_types.QLabel, ): cint =
  cint(fcQLabel_alignment(self.h))

proc setAlignment*(self: gen_qlabel_types.QLabel, alignment: cint): void =
  fcQLabel_setAlignment(self.h, cint(alignment))

proc setWordWrap*(self: gen_qlabel_types.QLabel, on: bool): void =
  fcQLabel_setWordWrap(self.h, on)

proc wordWrap*(self: gen_qlabel_types.QLabel, ): bool =
  fcQLabel_wordWrap(self.h)

proc indent*(self: gen_qlabel_types.QLabel, ): cint =
  fcQLabel_indent(self.h)

proc setIndent*(self: gen_qlabel_types.QLabel, indent: cint): void =
  fcQLabel_setIndent(self.h, indent)

proc margin*(self: gen_qlabel_types.QLabel, ): cint =
  fcQLabel_margin(self.h)

proc setMargin*(self: gen_qlabel_types.QLabel, margin: cint): void =
  fcQLabel_setMargin(self.h, margin)

proc hasScaledContents*(self: gen_qlabel_types.QLabel, ): bool =
  fcQLabel_hasScaledContents(self.h)

proc setScaledContents*(self: gen_qlabel_types.QLabel, scaledContents: bool): void =
  fcQLabel_setScaledContents(self.h, scaledContents)

proc sizeHint*(self: gen_qlabel_types.QLabel, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQLabel_sizeHint(self.h))

proc minimumSizeHint*(self: gen_qlabel_types.QLabel, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQLabel_minimumSizeHint(self.h))

proc setBuddy*(self: gen_qlabel_types.QLabel, buddy: gen_qwidget_types.QWidget): void =
  fcQLabel_setBuddy(self.h, buddy.h)

proc buddy*(self: gen_qlabel_types.QLabel, ): gen_qwidget_types.QWidget =
  gen_qwidget_types.QWidget(h: fcQLabel_buddy(self.h))

proc heightForWidth*(self: gen_qlabel_types.QLabel, param1: cint): cint =
  fcQLabel_heightForWidth(self.h, param1)

proc openExternalLinks*(self: gen_qlabel_types.QLabel, ): bool =
  fcQLabel_openExternalLinks(self.h)

proc setOpenExternalLinks*(self: gen_qlabel_types.QLabel, open: bool): void =
  fcQLabel_setOpenExternalLinks(self.h, open)

proc setTextInteractionFlags*(self: gen_qlabel_types.QLabel, flags: cint): void =
  fcQLabel_setTextInteractionFlags(self.h, cint(flags))

proc textInteractionFlags*(self: gen_qlabel_types.QLabel, ): cint =
  cint(fcQLabel_textInteractionFlags(self.h))

proc setSelection*(self: gen_qlabel_types.QLabel, param1: cint, param2: cint): void =
  fcQLabel_setSelection(self.h, param1, param2)

proc hasSelectedText*(self: gen_qlabel_types.QLabel, ): bool =
  fcQLabel_hasSelectedText(self.h)

proc selectedText*(self: gen_qlabel_types.QLabel, ): string =
  let v_ms = fcQLabel_selectedText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc selectionStart*(self: gen_qlabel_types.QLabel, ): cint =
  fcQLabel_selectionStart(self.h)

proc setText*(self: gen_qlabel_types.QLabel, text: string): void =
  fcQLabel_setText(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc setPixmap*(self: gen_qlabel_types.QLabel, pixmap: gen_qpixmap_types.QPixmap): void =
  fcQLabel_setPixmap(self.h, pixmap.h)

proc setPicture*(self: gen_qlabel_types.QLabel, picture: gen_qpicture_types.QPicture): void =
  fcQLabel_setPicture(self.h, picture.h)

proc setMovie*(self: gen_qlabel_types.QLabel, movie: gen_qmovie_types.QMovie): void =
  fcQLabel_setMovie(self.h, movie.h)

proc setNum*(self: gen_qlabel_types.QLabel, num: cint): void =
  fcQLabel_setNum(self.h, num)

proc setNum*(self: gen_qlabel_types.QLabel, num: float64): void =
  fcQLabel_setNumWithNum(self.h, num)
